--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,24 @@
-<p>
-  admin works!
-</p>
+  <!-- Nav Bar -->
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="EventsPage.html">Events </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="News.html">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="CurrentMembers.html">Current Members</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Apply.html">Apply for Membership</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div> <!-- End Nav Bar -->
