--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,14 @@
-<p>
-  footer works!
-</p>
+<footer style="background-color: rgb(20, 59, 107); color: white;">
+    <div style="text-align: center">
+      <div>
+        <h6 class="display-6" style="text-align: center; font-size: 16px;">Site Powered by Crescent Cool Cats</h6>
+      </div>
+      <div>
+        <label style="text-align: center;">Contact us:</label>
+        <br>
+        <a style="text-decoration: none;"><i class="fab fa-facebook right"></i> Facebook</a>
+        <a style="text-decoration: none;"><i class="fas fa-address-book right"></i> Address</a>
+        <a style="text-decoration: none;"><i class="fas fa-phone-square right"></i> Phone number</a>
+      </div>
+    </div>
+  </footer>
