--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,87 @@
-<p>
-  home works!
-</p>
+ <div class="box" style="background-image: url('../images/wallpaper_2.jpg')" ng-controller="indexController">
+    <div class="container" ng-controller="indexController" style="background-color: white;">
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <img src="../images/index/homepage_stockimage_carousel_1.jpg" alt="homepage_stockimage_carousel_1" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="../images/index/homepage_stockimage_carousel_0.jpg" alt="homepage_stockimage_carousel_0" style="width:100%;">
+          </div>
+
+          <div class="item">
+            <img src="../images/index/homepage_stockimage_carousel_2.jpg" alt="homepage_stockimage_carousel_2" style="width:100%;">
+          </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+      <div class = "row">
+        <div class = "col-sm-7"  style="background-color:white; text-align: center;  border-right-style: solid; border-bottom-style:solid;">
+          <h2>Club Info</h2>
+        </div>
+
+        <div class = "col-sm-5"  style="background-color:white; text-align: center; border-bottom-style:solid;">
+          <h2>Upcoming Events</h2>
+        </div>
+      </div>
+
+        <div class = row>
+          <div class = "col-sm-7">
+            <div>
+              <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                  <a ng-click="selectClass(1)" ng-class="{active: classSelected == 1}" class="nav-link active" >General Info</a>
+                </li>
+                <li class="nav-item">
+                  <a ng-click="selectClass(2)" ng-class="{active: classSelected == 2}" class="nav-link" >Current E-Board</a>
+                </li>
+                <li class="nav-item">
+                  <a ng-click="selectClass(3)" ng-class="{active: classSelected == 3}" class="nav-link" >Meeting Info</a>
+                </li>
+                <li class="nav-item">
+                  <a ng-click="selectClass(4)" ng-class="{active: classSelected == 4}" class="nav-link" >Contacts</a>
+                </li>
+              </ul>
+            </div>
+            <div class="event-overview" ng-repeat="section in displayedArr">
+              <div style="text-align: center;">
+                <h3>{{section.header}}</h3>
+                <p>{{section.content}}</p>
+                <div ng-if="classSelected == 2">
+                  <ul>
+                    <li>President: {{section.president}}</li>
+                    <li>Vice President: {{section.vice}}</li>
+                    <li>Treasure: {{section.other}}</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class = "col-sm-5">
+            <div id="calendar" data-provide="calendar"></div>
+          </div>
+      </div>
+    </div>
+  </div>
