--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,3 +1,27 @@
-<p>
-  nav works!
-</p>
+ <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events">Events </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="news">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="eboard">E Board</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="apply">Apply for Membership</a>
+          </li>
+        </ul>
+      </div>
+      <!-- Login Button for Modal -->
+      <div class="login-button">
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Admin Login</button>
+      </div>
+    </nav>
+  </div> <!-- End Nav -->
