--- a/src/app/apply/apply.component.html
+++ b/src/app/apply/apply.component.html
@@ -1,3 +1,35 @@
-<p>
-  apply works!
-</p>
+<div class="box" style="background-image: url('../images/wallpaper_2.jpg')">
+  <div class = "container" style="border-style: solid; background-color: white;">
+    <div class = 'row'>
+      <div class ="col-sm-3">
+      </div>
+      <div class ="col-sm-6">
+        <div class="titleHolder" style="padding-top:10px; padding-bottom:10px;">
+          <h2>Apply for Membership</h2>
+        </div>
+        <form>
+          <div class = "textHolder">
+            <input type="text" name="name" placeholder="Name" required style="width: 100%;"><br>
+          </div>
+          <div class = "textHolder">
+            <input type="text" name="email" placeholder="Email Address" required style="width: 100%;"><br>
+          </div>
+          <div class = "textHolder">
+            <input type="checkbox" name="belay"> Are you Belay Certified?<br>
+          </div>
+          <div class = "textHolder">
+            <input type="checkbox" name="lead"> Are you Lead Certified?<br>
+          </div>
+          <div class = "textHolder">
+            <input type="text" name="reason" placeholder="Why would you want to join?" style="width: 100%; height: 100px;"><br>
+          </div>
+          <div class = "buttonHolder">
+            <input type="submit" value="Submit">
+          </div>
+        </form>
+      </div>
+      <div class ="col-sm-3">
+      </div>
+    </div>
+  </div>
+</div>
