login modal template complete

--- a/src/app/login-modal/login-modal.component.html
+++ b/src/app/login-modal/login-modal.component.html
@@ -1,3 +1,2 @@
-<p>
-  login-modal works!
-</p>
+<!-- Login Modal -->
+<button class="btn btn-lg btn-outline-primary" (click)="open()">Admin Login</button>
