--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -20,8 +20,6 @@
         </ul>
       </div>
       <!-- Login Button for Modal -->
-      <div class="login-button">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Admin Login</button>
-      </div>
+      <app-loginModal-component></app-loginModal-component>
     </nav>
   </div> <!-- End Nav -->
