event register modal

--- a/src/app/event-register-modal/event-register-modal.component.html
+++ b/src/app/event-register-modal/event-register-modal.component.html
@@ -1,3 +1,2 @@
-<p>
-  event-register-modal works!
-</p>
+<!-- Event Register Modal -->
+<button style="float:right" class="btn btn-lg btn-outline-primary" (click)="open()">Event Register</button>
