--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -10,7 +10,8 @@
           <p style="float: left">{{ event.desc }}</p>
         </div>
         <div class="col-sm-4">
-          <button type="button" class="btn btn-primary" name="Register" style="width:100px; height:50px; float: right">{{ event.register }}</button>
+          <app-event-register-modal-component></app-event-register-modal-component>
+          <!-- <button type="button" class="btn btn-primary" name="Register" style="width:100px; height:50px; float: right">{{ event.register }}</button> -->
         </div>
       </div>
     </div>
