Lots of changes
-admin login setup
-front end changes

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,24 +2,28 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
+          <li>
+            <a class="nav-link" href="home"><img [src]="images[0]" alt="nav logo" height="55em" width="65em"></a>
+          </li>
           <li class="nav-item active">
-            <a class="nav-link" href="home">Home</a>
+            <a class="nav-link" href="home" style="margin-top:1em">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="events">Events </a>
+            <a class="nav-link" href="events" style="margin-top:1em">Events </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="news">News</a>
+            <a class="nav-link" href="news" style="margin-top:1em">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="eboard">E Board</a>
+            <a class="nav-link" href="eboard" style="margin-top:1em">E Board</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="apply">Apply for Membership</a>
+            <a class="nav-link" href="apply" style="margin-top:1em">Apply for Membership</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login" style="margin-top:1em">Admin Login</a>
           </li>
         </ul>
       </div>
-      <!-- Login Button for Modal -->
-      <app-loginModal-component></app-loginModal-component>
     </nav>
   </div> <!-- End Nav -->
