--- a/src/app/eboard/eboard.component.html
+++ b/src/app/eboard/eboard.component.html
@@ -1,3 +1,151 @@
-<p>
-  eboard works!
-</p>
+<div style="padding-top: 2%; padding-bottom: 2%">
+  <center>
+    <h1>Meet the E-Board</h1>
+  </center>
+</div>
+
+<div style="margin-left: 5%; margin-right: 5%">
+  <!--Grid row-->
+  <div class="row">
+
+    <!-- President -->
+    <!--Grid column-->
+    <div class="col">
+      <mdb-card>
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+        </div>
+        <mdb-card-body>
+          <!--Name-->
+          <mdb-card-title>
+            <h4>Kyle Gorman</h4>
+          </mdb-card-title>
+          <hr>
+          <!--Quotation-->
+          <p>
+            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+            adipisci</p>
+        </mdb-card-body>
+      </mdb-card>
+    </div>
+
+    <!-- Vice President -->
+    <!--Grid column-->
+    <div class="col">
+      <mdb-card>
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+        </div>
+        <mdb-card-body>
+          <!--Name-->
+          <mdb-card-title>
+            <h4>Eamon Duffy</h4>
+          </mdb-card-title>
+          <hr>
+          <!--Quotation-->
+          <p>
+            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+            adipisci</p>
+        </mdb-card-body>
+      </mdb-card>
+    </div>
+
+    <!-- Treasurer -->
+    <!--Grid column-->
+    <div class="col">
+      <mdb-card>
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+        </div>
+        <mdb-card-body>
+          <!--Name-->
+          <mdb-card-title>
+            <h4>Ryan Hanlon</h4>
+          </mdb-card-title>
+          <hr>
+          <!--Quotation-->
+          <p>
+            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+            adipisci</p>
+        </mdb-card-body>
+      </mdb-card>
+    </div>
+  </div>
+  <!--Grid row-->
+</div> <!-- End styling -->
+
+<div style="margin: 3%">
+  <!--Grid row-->
+  <div class="row">
+
+    <!-- Team Manager -->
+    <!--Grid column-->
+    <div class="col">
+      <mdb-card>
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+        </div>
+        <mdb-card-body>
+          <!--Name-->
+          <mdb-card-title>
+            <h4>Will Solz</h4>
+          </mdb-card-title>
+          <hr>
+          <!--Quotation-->
+          <p>
+            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+            adipisci</p>
+        </mdb-card-body>
+      </mdb-card>
+    </div>
+
+    <!-- Technique Guide -->
+    <!--Grid column-->
+    <div class="col">
+      <mdb-card>
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+        </div>
+        <mdb-card-body>
+          <!--Name-->
+          <mdb-card-title>
+            <h4>Maire Clarke</h4>
+          </mdb-card-title>
+          <hr>
+          <!--Quotation-->
+          <p>
+            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+            adipisci</p>
+        </mdb-card-body>
+      </mdb-card>
+    </div>
+
+    <!-- Secretary -->
+    <!--Grid column-->
+    <div class="col">
+      <mdb-card>
+        <!--Avatar-->
+        <div class="avatar mx-auto">
+          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+        </div>
+        <mdb-card-body>
+          <!--Name-->
+          <mdb-card-title>
+            <h4>Rachel Piscitelli</h4>
+          </mdb-card-title>
+          <hr>
+          <!--Quotation-->
+          <p>
+            <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
+            adipisci</p>
+        </mdb-card-body>
+      </mdb-card>
+    </div>
+  </div>
+  <!--Grid row-->
+</div> <!-- End styling -->
