--- a/src/app/event-register-modal/event-register-modal.component.html
+++ b/src/app/event-register-modal/event-register-modal.component.html
@@ -1,2 +1,2 @@
 <!-- Event Register Modal -->
-<button style="float:right" class="btn btn-lg btn-outline-primary" (click)="open()">Event Register</button>
+<button style="float:right" class="btn btn-primary" (click)="open()">Event Register</button>
