--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,66 @@
- <div class="box" >
-    <div  style="background-color: white;">
+<div class="box">
+  <div style="background-color: white;">
 
-      <app-home-carousel></app-home-carousel>
-      <div class="container">
-        <div>
-          <h1 style="text-align: center !important">General Info</h1>
-          <div class="form-border"></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-        </div>
+    <app-home-carousel></app-home-carousel>
+    
+    <div style="margin-top: 4%; margin-bottom: 2%">
+      <center>
+        <h3><i>Climbers of all Levels Welcome</i></h3>
+      </center>
+    </div>
 
-        <div>
-          <h1 style="text-align: center !important">Meeting Info</h1>
-          <div class="form-border"></div>
-          <ul style="list-style: none">
-            <li><h4>Weekly meetings in CCE: ### at 8:00pm</h4></li>
-            <li><h4>Occasional rock climbing trips to virus.exe</h4></li>
-            <li><h4>Kyle has low T</h4></li>
-          </ul>
-        </div>
+    <div class="card-deck" style="margin-top: 2%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%">
+        <!-- Card -->
+        <mdb-card>
+          <!--Card content-->
+          <mdb-card-body>
+            <!--Title-->
+            <mdb-card-title>
+              <h4>About Us</h4>
+            </mdb-card-title>
+            <!--Text-->
+            <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
+              content. Some quick example text to build on the card title and make up the bulk of the card's
+              content.Some quick example text to build on the card title and make up the bulk of the card's
+              content.Some quick example text to build on the card title and make up the bulk of the card's
+              content.Some quick example text to build on the card title and make up the bulk of the card's
+              content.
+            </mdb-card-text>
+          </mdb-card-body>
+        </mdb-card>
       </div>
+
+    <div class="card-deck" style="margin-top: 2%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%">
+      <!-- Card -->
+      <mdb-card>
+        <!--Card content-->
+        <mdb-card-body>
+          <!--Title-->
+          <mdb-card-title>
+            <h4>Find Us On...</h4>
+          </mdb-card-title>
+          <!--Text-->
+          <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
+            content.
+          </mdb-card-text>
+        </mdb-card-body>
+      </mdb-card>
+
+      <!-- Card -->
+      <mdb-card>
+        <!--Card content-->
+        <mdb-card-body>
+          <!--Title-->
+          <mdb-card-title>
+            <h4>Gallery</h4>
+          </mdb-card-title>
+          <!--Text-->
+          <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's
+            content.
+          </mdb-card-text>
+          <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
+        </mdb-card-body>
+      </mdb-card>
     </div>
   </div>
+</div>
