--- a/src/app/apply/apply.component.html
+++ b/src/app/apply/apply.component.html
@@ -1,4 +1,4 @@
-<div class="box" style="background-image: url('../images/wallpaper_2.jpg')">
+<div class="box" style="background-image: url('../images/wallpaper_2.jpg'); padding-top: 1%; padding-bottom: 1%">
   <div class = "container" style="border-style: solid; background-color: white;">
     <div class = 'row'>
       <div class ="col-sm-3">
@@ -24,11 +24,10 @@
             <input type="text" name="reason" placeholder="Why would you want to join?" style="width: 100%; height: 100px;"><br>
           </div>
           <div class = "buttonHolder">
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" mdbBtn color="primary" mdbWavesEffect>
+
           </div>
         </form>
-      </div>
-      <div class ="col-sm-3">
       </div>
     </div>
   </div>
