--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <form (submit)="loginUser($event)">
-  <h3>Admin Login</h3>
+  <h3 style="padding-top:5%">Admin Login</h3>
   <hr>
 	<div class="input">
 		<label>Username</label>
@@ -10,6 +10,6 @@
 		<input type="password">
 	</div>
 	<div class="input" style="padding-bottom:5%">
-		<input type="submit" value="Login">
+	<center><input type="submit" class="btn btn-primary" value="Login"></center>
 	</div>
 </form>
