Putting out fires like smokey
Putting out fires like smokey

--- a/src/app/eboard/eboard.component.html
+++ b/src/app/eboard/eboard.component.html
@@ -1,28 +1,24 @@
-<div style="padding-top: 2%; padding-bottom: 2%">
-  <center>
-    <h1>Meet the E-Board</h1>
-  </center>
+<div class="row" style="padding-top: 2%; padding-bottom: 2%">
+  <div style="margin: auto;">
+    <h1>Meet the E-Board</h1>    
+  </div>
 </div>
 
 <div style="margin-left: 5%; margin-right: 5%">
   <!--Grid row-->
   <div class="row">
-
     <!-- President -->
     <!--Grid column-->
     <div class="col">
       <mdb-card>
-        <!--Avatar-->
         <div class="avatar mx-auto">
           <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
         </div>
         <mdb-card-body>
-          <!--Name-->
           <mdb-card-title>
             <h4>Kyle Gorman</h4>
           </mdb-card-title>
           <hr>
-          <!--Quotation-->
           <p>
             <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
             adipisci</p>
@@ -30,21 +26,16 @@
       </mdb-card>
     </div>
 
-    <!-- Vice President -->
-    <!--Grid column-->
     <div class="col">
       <mdb-card>
-        <!--Avatar-->
         <div class="avatar mx-auto">
           <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
         </div>
         <mdb-card-body>
-          <!--Name-->
           <mdb-card-title>
             <h4>Eamon Duffy</h4>
           </mdb-card-title>
           <hr>
-          <!--Quotation-->
           <p>
             <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
             adipisci</p>
@@ -52,21 +43,16 @@
       </mdb-card>
     </div>
 
-    <!-- Treasurer -->
-    <!--Grid column-->
     <div class="col">
       <mdb-card>
-        <!--Avatar-->
         <div class="avatar mx-auto">
           <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
         </div>
         <mdb-card-body>
-          <!--Name-->
           <mdb-card-title>
             <h4>Ryan Hanlon</h4>
           </mdb-card-title>
           <hr>
-          <!--Quotation-->
           <p>
             <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
             adipisci</p>
@@ -74,28 +60,22 @@
       </mdb-card>
     </div>
   </div>
-  <!--Grid row-->
-</div> <!-- End styling -->
+</div> 
 
 <div style="margin: 3%">
-  <!--Grid row-->
+  Grid row
   <div class="row">
 
-    <!-- Team Manager -->
-    <!--Grid column-->
     <div class="col">
       <mdb-card>
-        <!--Avatar-->
         <div class="avatar mx-auto">
           <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
         </div>
         <mdb-card-body>
-          <!--Name-->
           <mdb-card-title>
             <h4>Will Solz</h4>
           </mdb-card-title>
           <hr>
-          <!--Quotation-->
           <p>
             <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
             adipisci</p>
@@ -103,21 +83,16 @@
       </mdb-card>
     </div>
 
-    <!-- Technique Guide -->
-    <!--Grid column-->
     <div class="col">
       <mdb-card>
-        <!--Avatar-->
         <div class="avatar mx-auto">
           <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
         </div>
         <mdb-card-body>
-          <!--Name-->
           <mdb-card-title>
             <h4>Maire Clarke</h4>
           </mdb-card-title>
           <hr>
-          <!--Quotation-->
           <p>
             <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
             adipisci</p>
@@ -125,21 +100,16 @@
       </mdb-card>
     </div>
 
-    <!-- Secretary -->
-    <!--Grid column-->
     <div class="col">
       <mdb-card>
-        <!--Avatar-->
         <div class="avatar mx-auto">
           <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
         </div>
         <mdb-card-body>
-          <!--Name-->
           <mdb-card-title>
             <h4>Rachel Piscitelli</h4>
           </mdb-card-title>
           <hr>
-          <!--Quotation-->
           <p>
             <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos,
             adipisci</p>
