--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,10 +3,10 @@
 
     <app-home-carousel></app-home-carousel>
     
-    <div style="margin-top: 4%; margin-bottom: 2%">
-      <center>
+    <div class="row" style="margin-top: 4%; margin-bottom: 2%">
+      <div style="margin: auto;">
         <h3><i>Climbers of all Levels Welcome</i></h3>
-      </center>
+      </div>
     </div>
 
     <div class="card-deck" style="margin-top: 2%; margin-bottom: 2%; padding-left: 2%; padding-right: 2%">
