--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -10,7 +10,7 @@
           <p style="float: left">{{ new.info }}</p>
         </div>
         <div class="col-sm-4">
-          <button class="btn btn-primary" style="float: right" href=" {{ new.link }}">Learn More</button>
+          <button class="btn btn-primary" style="float: right"><a href="{{ new.link }}">Learn More</a></button>
         </div>
       </div>
     </div>
