--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,7 @@
 <div class="container" style="margin-top: 20px;">
+	<div class="row" style="border-bottom: 1px solid black; margin-bottom: 5px;">
+		<button class="btn btn-small btn-success" (click)="export()">Export Current to Excel <i class="fas fa-file-excel"></i></button>
+	</div>
 	<ngb-tabset>
 	  <ngb-tab>
 	  	<ng-template ngbTabTitle>
